Iteration planning todo buttons were broken in all browsers, fixed that.  Styled iteration planning to look ok in IE7.

--- a/scrumdo-web/media/css/ie7.css
+++ b/scrumdo-web/media/css/ie7.css
@@ -14,3 +14,10 @@
     width: 280px;
     margin-bottom: 4px;   
 }
+
+.story_column {
+  display: inline;
+  width: 45%;
+  overflow: hidden;
+  word-wrap: break-word;
+}
